fixed compressed thumbnail overlay on mobile

--- a/_sass/brykng/_layout.scss
+++ b/_sass/brykng/_layout.scss
@@ -131,10 +131,10 @@ section, .hero {
   }
 
   article .project__info {
+    padding: 1em;
     visibility: hidden;
     opacity: 0;
     position: absolute;
-    padding: 1em;
     transition: all 200ms linear;
     top: 0;
     bottom: 0;
@@ -146,6 +146,10 @@ section, .hero {
     flex-direction: column;
     text-align: center;
     font-weight: normal;
+    font-size: 0.75em;
+    @media (min-width: $sm){
+      font-size: inherit;
+    }
 
     .project__client {
       color: $white;
@@ -161,10 +165,14 @@ section, .hero {
     }
 
     .project__year {
+      display: none;
       position: absolute;
       top: 1em;
       right: 1em;
       color: $white;
+      @media (min-width: $sm){
+        display: block;
+      }
     }
 
   }
